Increased kubernetes parity
